color contrast fixes

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -30,7 +30,7 @@
     --black: #0e0c0c;
 
     /* Button Background colors */
-    --button-color: #e38d0d;
+    --button-color: #714a0e;
     --button-color-hover: #f3a530;
 
     /* Top Navigation Colors */
@@ -118,6 +118,7 @@ header {
     grid-template-columns: 200px auto;
     align-items: center;
     background-color: #484029;
+    color: var(--white);
 }
 
 nav {
@@ -226,12 +227,14 @@ footer p {
 .home-title {
     margin: 50px 0 20px 0;
     color: var(--white);
+    background-color: #131814;
     justify-self: center;
 }
 
 .home-subtitle {
     margin: 20px 0;
     color: var(--white);
+    background-color: #131814;
     justify-self: center;
 }
 
@@ -433,6 +436,7 @@ footer p {
     width: 100%;
     text-align: center;
     color: #fff;
+    background-color: rgba(56, 59, 103, 0.6);
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
@@ -451,7 +455,7 @@ footer p {
 }
 
 .abs-article p {
-    color: #fff;
+    color: #333;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-size: x-large;
     text-align: center;
@@ -582,7 +586,7 @@ input, label, textarea, select {
 label {
     margin-top: 20px;
     margin-bottom: 5px;
-    color: #0efff7;
+    color: #004d4a;
     letter-spacing: .5px;
 }
 
@@ -624,6 +628,7 @@ input:focus, textarea:focus, select:focus {
 
 .add-phone a, .add-phone address {
     color: #fff;
+    background-color: rgba(31, 36, 19, 0.5);
     font-size: 24px;
     font-weight: 500;
     display: block;
